mobile format improvement

--- a/birds_inc_webpage_mobile.html
+++ b/birds_inc_webpage_mobile.html
@@ -295,7 +295,7 @@
   
   <footer style="background-color: #DFDFDF;">
   <div class="wrapper_mobile" align="center">
-    <div id="mobile_footer_menu">
+    <div id="mobile_footer_menu" style="padding-top: 1px;">
       <ul>
         <li><a href="#"><pre><h3>HOME</h3></pre></a></li>
         <li><a href="#"><pre><h3>ABOUT</h3></pre></a></li>
@@ -308,7 +308,7 @@
       src="https://maps.google.com/maps?hl=en&q=403 S Mission Dr, San Gabriel, CA 91776&ie=UTF8&t=m&z=16&iwloc=B&output=embed">
     </iframe>
     <img src="images/logo_grey.png" />
-    <div align="center">
+    <div align="center" style="margin-top:-40px; padding-bottom: 1px;">
       <h6>Copyright &#169; 2015 Birds Inc.</h6>
       <h6 style="margin-top: -40px;">All Rights Reserved.</h6> 
       <h6 style="margin-top: -40px;">Website by</h6>
