desktop & mobile mostly complete

--- a/birds_inc_webpage_mobile.html
+++ b/birds_inc_webpage_mobile.html
@@ -58,9 +58,39 @@
       <img src="images/logo.png" />
       <hr id="menu_hr_line">
         <div align="center">
-          <h2mobilegrey>MENU</h2mobilegreay>
+        <ul id="menu_mobile">
+          <li id="menu_h2mobilegrey"><a href="#" class="menu_mobile_link"><pre><h2mobilegrey>MENU</h2mobilegreay></pre></a>
+            <div id="hr_line2"><hr id="menu_hr_line2"></div>
+            <ul id="dropdown_menu_mobile">
+              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>HOME</h1tealmobile></pre></a></li>
+              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>ABOUT</h1tealmobile></pre></a></li>
+              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>PRODUCT</h1tealmobile></pre></a>
+                <ul id="product_submenu_mobile">
+                  <!-- Submenu items goes here -->
+                  <li><a class="body_link_mobile" href="#"><body>bird feeders & houses</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>bird watching equipment</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>books</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>cleaning tools</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>bird cages</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>bird toys</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>training materials</body></a></li>
+                  <hr>
+                  <li><a class="body_link_mobile" href="#"><body>bird costumes</body></a></li>
+                  <hr>
+                </ul>
+              </li>
+              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>CONTACT</h1tealmobile></pre></a></li>
+            </ul>
+          </li>
+        </ul>
         </div>
-      <hr id="menu_hr_line">
+      <!--<hr id="menu_hr_line">-->
       <!-- news ticker -->
       <div id="news_ticker_mobile">
         <ul class="bxslider_mobile">
@@ -298,9 +328,9 @@
     <div id="mobile_footer_menu" style="padding-top: 1px;">
       <ul>
         <li><a href="#"><pre><h3>HOME</h3></pre></a></li>
-        <li><a href="#"><pre><h3>ABOUT</h3></pre></a></li>
-        <li><a href="#"><pre><h3>PRODUCTS</h3></pre></a></li>
-        <li><a href="#"><pre><h3>CONTACT</h3></pre></a></li>
+        <li><a href="#"><pre><h3 style="margin-top: -10px;">ABOUT</h3></pre></a></li>
+        <li><a href="#"><pre><h3 style="margin-top: -10px;">PRODUCTS</h3></pre></a></li>
+        <li><a href="#"><pre><h3 style="margin-top: -10px;">CONTACT</h3></pre></a></li>
       </ul>
     </div>
     <!-- embed google map location -->
@@ -311,7 +341,7 @@
     <div align="center" style="margin-top:-40px; padding-bottom: 1px;">
       <h6>Copyright &#169; 2015 Birds Inc.</h6>
       <h6 style="margin-top: -40px;">All Rights Reserved.</h6> 
-      <h6 style="margin-top: -40px;">Website by</h6>
+      <h6 style="margin-top: -40px;">Website by Steven To</h6>
     </div>
   </div>
   </footer>
