desktop & mobile slight layout update

--- a/birds_inc_webpage.html
+++ b/birds_inc_webpage.html
@@ -75,7 +75,7 @@
               <li><div class="vertical_line"/></li>
               <li><a class="h2_link" href="#"><pre><h2>ABOUT  </h2></pre></a></li>
               <li><div class="vertical_line"/></li>
-              <li><a class="h2grey_link" href="#"><pre><h2grey>PRODUCT  </h2grey></pre></a>
+              <li><a class="h2grey_link" href="#"><pre><h2grey>PRODUCTS  </h2grey></pre></a>
                 <!-- submenu -->
                 <ul id="submenu">
    
@@ -349,7 +349,7 @@
               <li><div class="vertical_line_grey" /></li>
               <li><a class="footer_link" href="#"><pre><h3>ABOUT </h3></pre></a></li>
               <li><div class="vertical_line_grey" /></li>
-              <li><a class="footer_link" href="#"><pre><h3>PRODUCT </h3></pre></a></li>
+              <li><a class="footer_link" href="#"><pre><h3>PRODUCTS </h3></pre></a></li>
               <li><div class="vertical_line_grey" /></li>
               <li><a class="footer_link" href="#"><pre><h3>CONTACT </h3></pre></a></li>
             </ul>
