--- a/birds_inc_webpage_mobile.html
+++ b/birds_inc_webpage_mobile.html
@@ -54,6 +54,7 @@
           google.maps.event.addDomListener(window, 'load', google_map_initialize);
         });
       </script>
+      
       <!-- Logo -->
       <img src="images/logo.png" />
       <hr id="menu_hr_line">
@@ -64,7 +65,7 @@
             <ul id="dropdown_menu_mobile">
               <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>HOME</h1tealmobile></pre></a></li>
               <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>ABOUT</h1tealmobile></pre></a></li>
-              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>PRODUCT</h1tealmobile></pre></a>
+              <li><a href="#" class="dropdown_menu_mobile_link"><pre><h1tealmobile>PRODUCTS</h1tealmobile></pre></a>
                 <ul id="product_submenu_mobile">
                   <!-- Submenu items goes here -->
                   <li><a class="body_link_mobile" href="#"><body>bird feeders & houses</body></a></li>
@@ -90,7 +91,7 @@
           </li>
         </ul>
         </div>
-      <!--<hr id="menu_hr_line">-->
+      
       <!-- news ticker -->
       <div id="news_ticker_mobile">
         <ul class="bxslider_mobile">
